# GitShip

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile.deploy.prod  LICENSE  README.md  env.json  go.mod  go.sum  main.go
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: control-api-test.yml
cmd/deploy/: deploy.go  error.go  main.go
cmd/logger/: init.go  log.go
docker/: init.go  pull.go  run.go
infrastructure/: go.mod  go.sum
internal/middleware/: ingest_middleware.go
internal/models/: deploy_payload.go
internal/utils/: jwt.go
pkg/docker/: conf.go  env.go  init.go
pkg/term/: printer.go
platform/control/: Dockerfile.dev  main.py  manage.py  pyproject.toml  run.sh
platform/control/core/: debug.py  environ.py  lifespan.py  logger.py  settings.py
platform/control/db/: __init__.py  auth_storage.py  cache.py  redis.py
platform/control/exceptions/: dbconnection.py  validation.py
platform/control/gitship/: asgi.py  settings.py  urls.py  wsgi.py
platform/control/models/: __init__.py  user.py  verification_token.py
platform/control/routers/: authRouter.py  authRoutes.py  usersRouter.py
platform/control/schemas/: authSchema.py  usersSchema.py
platform/control/services/: exceptions.py  login.py  logout.py  refresh_token.py  register.py  reset_password.py  verify_email.py
platform/control/tests/: conftest.py  email_service.py  environment.py
platform/control/tests/auth/: test_login.py  test_register.py
platform/control/utils/: auth_cookie.py  datetime.py  eddsa.py  password.py  token.py
platform/control/utils/auth_token/: __init__.py  access_token.py  refresh_token.py
platform/control/utils/email/: __init__.py  brevo.py  email.py
platform/control/utils/jwt/: __init__.py  access_token.py  refresh_token.py
platform/control/utils/status/: __init__.py  response.py  resultcode.py
platform/control/utils/template/: __init__.py  html_template.py  types.py
platform/control/utils/template/html/: email_verify.html  reset_password.html
utils/: braille_progress.go  color_cli.go
(+37 files in other folders)
