[project]
name = "gitship"
version = "0.1.0"
description = "Gitship is a tool to deploy code from Git and Docker Registry"
authors = [
    {name = "BiltuDas1",email = "billionto@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
]

[dependency-groups]
dev = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "watchfiles (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
